Bug 1928758 - Avoid repositioning event if its target has not changed. r=ajakobi

The repositioning should be a no-op in such cases.

Differential Revision: https://phabricator.services.mozilla.com/D230888